[gd_scene load_steps=9 format=3 uid="uid://b8ftcsc1pjwjr"]

[ext_resource type="TileSet" uid="uid://y4df1ufgr2w1" path="res://resource/floor2_tile_set.tres" id="1_3lhud"]
[ext_resource type="Script" path="res://Main/mazegameplay.gd" id="1_nr3g8"]
[ext_resource type="PackedScene" uid="uid://buqvb6svjuu1q" path="res://scenes/maze/maze.tscn" id="2_6k68x"]
[ext_resource type="PackedScene" uid="uid://c4wdjkcibevqb" path="res://player1/player_1.tscn" id="3_sa3do"]
[ext_resource type="PackedScene" uid="uid://dm8ym721eb4jy" path="res://player2/player_2.tscn" id="4_to8om"]
[ext_resource type="PackedScene" uid="uid://dmuxtjx5hksor" path="res://scenes/gamecamera/game_camera_2d.tscn" id="6_u35cj"]
[ext_resource type="PackedScene" uid="uid://d083ho5dlchmk" path="res://resource/inventory/Key.tscn" id="7_1u20l"]
[ext_resource type="PackedScene" uid="uid://uwfcghsmmebj" path="res://resource/gates/gate.tscn" id="8_jqc4q"]

[node name="Mazegameplay" type="Node"]
script = ExtResource("1_nr3g8")

[node name="Floor1" type="TileMap" parent="."]
modulate = Color(0.980392, 0.984314, 0.992157, 1)
self_modulate = Color(0.956863, 0.654902, 0.54902, 1)
tile_set = ExtResource("1_3lhud")
format = 2
layer_0/tile_data = PackedInt32Array(1376295, 0, 0, 1310759, 0, 1, 1245223, 0, 0, 1179687, 0, 0, 1114151, 0, 0, 1048615, 0, 1, 983079, 0, 0, 917543, 0, 1, 852007, 0, 0, 786471, 0, 1, 720935, 0, 1, 655399, 0, 2, 589863, 0, 0, 524327, 0, 0, 458791, 0, 2, 393255, 0, 0, 327719, 0, 2, 262183, 0, 0, 196647, 0, 2, 131111, 0, 1, 65575, 0, 1, 39, 0, 0, 1376294, 0, 2, 1310758, 0, 1, 1245222, 0, 1, 1179686, 0, 1, 1114150, 0, 0, 1048614, 0, 0, 983078, 0, 2, 917542, 0, 0, 852006, 0, 2, 786470, 0, 1, 720934, 0, 1, 655398, 0, 2, 589862, 0, 0, 524326, 0, 0, 458790, 0, 0, 393254, 0, 1, 327718, 0, 0, 262182, 0, 1, 196646, 0, 2, 131110, 0, 1, 65574, 0, 2, 38, 0, 2, 1376293, 0, 1, 1310757, 0, 0, 1245221, 0, 1, 1179685, 0, 1, 1114149, 0, 0, 1048613, 0, 2, 983077, 0, 1, 917541, 0, 1, 852005, 0, 2, 786469, 0, 0, 720933, 0, 0, 655397, 0, 1, 589861, 0, 2, 524325, 0, 0, 458789, 0, 0, 393253, 0, 1, 327717, 0, 0, 262181, 0, 0, 196645, 0, 0, 131109, 0, 0, 65573, 0, 1, 37, 0, 2, 1376292, 0, 1, 1310756, 0, 0, 1245220, 0, 0, 1179684, 0, 1, 1114148, 0, 2, 1048612, 0, 0, 983076, 0, 0, 917540, 0, 0, 852004, 0, 0, 786468, 0, 2, 720932, 0, 2, 655396, 0, 2, 589860, 0, 1, 524324, 0, 0, 458788, 0, 2, 393252, 0, 0, 327716, 0, 0, 262180, 0, 0, 196644, 0, 0, 131108, 0, 0, 65572, 0, 0, 36, 0, 0, 1376291, 0, 0, 1310755, 0, 0, 1245219, 0, 0, 1179683, 0, 0, 1114147, 0, 0, 1048611, 0, 2, 983075, 0, 0, 917539, 0, 0, 852003, 0, 0, 786467, 0, 2, 720931, 0, 1, 655395, 0, 0, 589859, 0, 0, 524323, 0, 1, 458787, 0, 2, 393251, 0, 1, 327715, 0, 1, 262179, 0, 2, 196643, 0, 0, 131107, 0, 0, 65571, 0, 1, 35, 0, 0, 1376290, 0, 0, 1310754, 0, 2, 1245218, 0, 2, 1179682, 0, 2, 1114146, 0, 1, 1048610, 0, 0, 983074, 0, 0, 917538, 0, 1, 852002, 0, 0, 786466, 0, 0, 720930, 0, 0, 655394, 0, 0, 589858, 0, 0, 524322, 0, 2, 458786, 0, 2, 393250, 0, 2, 327714, 0, 2, 262178, 0, 0, 196642, 0, 1, 131106, 0, 0, 65570, 0, 1, 34, 0, 0, 1376289, 0, 0, 1310753, 0, 1, 1245217, 0, 0, 1179681, 0, 0, 1114145, 0, 0, 1048609, 0, 0, 983073, 0, 0, 917537, 0, 2, 852001, 0, 2, 786465, 0, 0, 720929, 0, 1, 655393, 0, 0, 589857, 0, 0, 524321, 0, 0, 458785, 0, 1, 393249, 0, 0, 327713, 0, 0, 262177, 0, 0, 196641, 0, 0, 131105, 0, 1, 65569, 0, 0, 33, 0, 1, 1376288, 0, 2, 1310752, 0, 2, 1245216, 0, 2, 1179680, 0, 2, 1114144, 0, 2, 1048608, 0, 0, 983072, 0, 2, 917536, 0, 1, 852000, 0, 1, 786464, 0, 2, 720928, 0, 2, 655392, 0, 0, 589856, 0, 1, 524320, 0, 2, 458784, 0, 2, 393248, 0, 1, 327712, 0, 1, 262176, 0, 0, 196640, 0, 0, 131104, 0, 1, 65568, 0, 1, 32, 0, 1, 1376287, 0, 2, 1310751, 0, 1, 1245215, 0, 1, 1179679, 0, 0, 1114143, 0, 0, 1048607, 0, 0, 983071, 0, 1, 917535, 0, 0, 851999, 0, 0, 786463, 0, 0, 720927, 0, 0, 655391, 0, 1, 589855, 0, 1, 524319, 0, 0, 458783, 0, 0, 393247, 0, 0, 327711, 0, 2, 262175, 0, 0, 196639, 0, 0, 131103, 0, 0, 65567, 0, 0, 31, 0, 2, 1376286, 0, 0, 1310750, 0, 2, 1245214, 0, 0, 1179678, 0, 0, 1114142, 0, 2, 1048606, 0, 0, 983070, 0, 2, 917534, 0, 0, 851998, 0, 0, 786462, 0, 1, 720926, 0, 0, 655390, 0, 2, 589854, 0, 0, 524318, 0, 1, 458782, 0, 0, 393246, 0, 1, 327710, 0, 2, 262174, 0, 1, 196638, 0, 0, 131102, 0, 0, 65566, 0, 0, 30, 0, 2, 1376285, 0, 1, 1310749, 0, 0, 1245213, 0, 2, 1179677, 0, 0, 1114141, 0, 1, 1048605, 0, 2, 983069, 0, 2, 917533, 0, 1, 851997, 0, 0, 786461, 0, 0, 720925, 0, 0, 655389, 0, 0, 589853, 0, 0, 524317, 0, 2, 458781, 0, 1, 393245, 0, 1, 327709, 0, 0, 262173, 0, 2, 196637, 0, 2, 131101, 0, 2, 65565, 0, 2, 29, 0, 0, 1376284, 0, 0, 1310748, 0, 0, 1245212, 0, 2, 1179676, 0, 1, 1114140, 0, 1, 1048604, 0, 1, 983068, 0, 0, 917532, 0, 2, 851996, 0, 2, 786460, 0, 1, 720924, 0, 2, 655388, 0, 1, 589852, 0, 1, 524316, 0, 0, 458780, 0, 0, 393244, 0, 2, 327708, 0, 0, 262172, 0, 2, 196636, 0, 1, 131100, 0, 1, 65564, 0, 0, 28, 0, 2, 1376283, 0, 0, 1310747, 0, 2, 1245211, 0, 0, 1179675, 0, 2, 1114139, 0, 1, 1048603, 0, 0, 983067, 0, 1, 917531, 0, 1, 851995, 0, 0, 786459, 0, 0, 720923, 0, 1, 655387, 0, 0, 589851, 0, 1, 524315, 0, 1, 458779, 0, 0, 393243, 0, 0, 327707, 0, 2, 262171, 0, 2, 196635, 0, 1, 131099, 0, 2, 65563, 0, 0, 27, 0, 0, 1376282, 0, 2, 1310746, 0, 1, 1245210, 0, 0, 1179674, 0, 2, 1114138, 0, 1, 1048602, 0, 1, 983066, 0, 1, 917530, 0, 2, 851994, 0, 1, 786458, 0, 2, 720922, 0, 0, 655386, 0, 1, 589850, 0, 1, 524314, 0, 0, 458778, 0, 2, 393242, 0, 1, 327706, 0, 2, 262170, 0, 1, 196634, 0, 2, 131098, 0, 1, 65562, 0, 0, 26, 0, 0, 1376281, 0, 0, 1310745, 0, 0, 1245209, 0, 2, 1179673, 0, 0, 1114137, 0, 0, 1048601, 0, 0, 983065, 0, 2, 917529, 0, 0, 851993, 0, 0, 786457, 0, 1, 720921, 0, 1, 655385, 0, 0, 589849, 0, 2, 524313, 0, 2, 458777, 0, 0, 393241, 0, 2, 327705, 0, 0, 262169, 0, 1, 196633, 0, 0, 131097, 0, 0, 65561, 0, 0, 25, 0, 0, 1376280, 0, 0, 1310744, 0, 0, 1245208, 0, 1, 1179672, 0, 0, 1114136, 0, 0, 1048600, 0, 0, 983064, 0, 0, 917528, 0, 2, 851992, 0, 1, 786456, 0, 0, 720920, 0, 2, 655384, 0, 0, 589848, 0, 2, 524312, 0, 2, 458776, 0, 0, 393240, 0, 0, 327704, 0, 2, 262168, 0, 2, 196632, 0, 0, 131096, 0, 0, 65560, 0, 1, 24, 0, 1, 1376279, 0, 1, 1310743, 0, 2, 1245207, 0, 0, 1179671, 0, 0, 1114135, 0, 2, 1048599, 0, 0, 983063, 0, 2, 917527, 0, 2, 851991, 0, 2, 786455, 0, 0, 720919, 0, 1, 655383, 0, 1, 589847, 0, 1, 524311, 0, 0, 458775, 0, 0, 393239, 0, 2, 327703, 0, 0, 262167, 0, 0, 196631, 0, 0, 131095, 0, 2, 65559, 0, 0, 23, 0, 0, 1376278, 0, 0, 1310742, 0, 0, 1245206, 0, 1, 1179670, 0, 0, 1114134, 0, 0, 1048598, 0, 0, 983062, 0, 1, 917526, 0, 2, 851990, 0, 0, 786454, 0, 0, 720918, 0, 2, 655382, 0, 0, 589846, 0, 0, 524310, 0, 2, 458774, 0, 1, 393238, 0, 1, 327702, 0, 0, 262166, 0, 1, 196630, 0, 0, 131094, 0, 1, 65558, 0, 2, 22, 0, 1, 1376277, 0, 2, 1310741, 0, 1, 1245205, 0, 0, 1179669, 0, 0, 1114133, 0, 0, 1048597, 0, 0, 983061, 0, 0, 917525, 0, 2, 851989, 0, 0, 786453, 0, 0, 720917, 0, 0, 655381, 0, 2, 589845, 0, 0, 524309, 0, 0, 458773, 0, 0, 393237, 0, 1, 327701, 0, 2, 262165, 0, 2, 196629, 0, 0, 131093, 0, 1, 65557, 0, 0, 21, 0, 0, 1376276, 0, 1, 1310740, 0, 1, 1245204, 0, 2, 1179668, 0, 0, 1114132, 0, 0, 1048596, 0, 2, 983060, 0, 0, 917524, 0, 0, 851988, 0, 0, 786452, 0, 1, 720916, 0, 2, 655380, 0, 0, 589844, 0, 2, 524308, 0, 0, 458772, 0, 0, 393236, 0, 0, 327700, 0, 0, 262164, 0, 1, 196628, 0, 2, 131092, 0, 0, 65556, 0, 1, 20, 0, 2, 1376275, 0, 0, 1310739, 0, 0, 1245203, 0, 0, 1179667, 0, 1, 1114131, 0, 2, 1048595, 0, 1, 983059, 0, 2, 917523, 0, 0, 851987, 0, 0, 786451, 0, 2, 720915, 0, 2, 655379, 0, 0, 589843, 0, 1, 524307, 0, 1, 458771, 0, 0, 393235, 0, 0, 327699, 0, 0, 262163, 0, 0, 196627, 0, 2, 131091, 0, 0, 65555, 0, 2, 19, 0, 2, 1376274, 0, 2, 1310738, 0, 1, 1245202, 0, 0, 1179666, 0, 1, 1114130, 0, 1, 1048594, 0, 0, 983058, 0, 0, 917522, 0, 2, 851986, 0, 0, 786450, 0, 0, 720914, 0, 0, 655378, 0, 1, 589842, 0, 0, 524306, 0, 2, 458770, 0, 0, 393234, 0, 2, 327698, 0, 0, 262162, 0, 0, 196626, 0, 1, 131090, 0, 0, 65554, 0, 0, 18, 0, 0, 1376273, 0, 2, 1310737, 0, 0, 1245201, 0, 0, 1179665, 0, 0, 1114129, 0, 0, 1048593, 0, 2, 983057, 0, 0, 917521, 0, 1, 851985, 0, 2, 786449, 0, 0, 720913, 0, 2, 655377, 0, 0, 589841, 0, 0, 524305, 0, 0, 458769, 0, 0, 393233, 0, 0, 327697, 0, 2, 262161, 0, 1, 196625, 0, 2, 131089, 0, 2, 65553, 0, 1, 17, 0, 2, 1376272, 0, 2, 1310736, 0, 1, 1245200, 0, 0, 1179664, 0, 2, 1114128, 0, 2, 1048592, 0, 2, 983056, 0, 0, 917520, 0, 2, 851984, 0, 1, 786448, 0, 0, 720912, 0, 1, 655376, 0, 1, 589840, 0, 1, 524304, 0, 1, 458768, 0, 1, 393232, 0, 1, 327696, 0, 1, 262160, 0, 0, 196624, 0, 1, 131088, 0, 1, 65552, 0, 2, 16, 0, 0, 1376271, 0, 2, 1310735, 0, 0, 1245199, 0, 2, 1179663, 0, 2, 1114127, 0, 0, 1048591, 0, 0, 983055, 0, 0, 917519, 0, 1, 851983, 0, 2, 786447, 0, 0, 720911, 0, 0, 655375, 0, 1, 589839, 0, 1, 524303, 0, 2, 458767, 0, 0, 393231, 0, 1, 327695, 0, 2, 262159, 0, 2, 196623, 0, 1, 131087, 0, 0, 65551, 0, 1, 15, 0, 0, 1376270, 0, 0, 1310734, 0, 2, 1245198, 0, 2, 1179662, 0, 0, 1114126, 0, 1, 1048590, 0, 0, 983054, 0, 1, 917518, 0, 0, 851982, 0, 2, 786446, 0, 0, 720910, 0, 0, 655374, 0, 0, 589838, 0, 0, 524302, 0, 0, 458766, 0, 2, 393230, 0, 2, 327694, 0, 0, 262158, 0, 1, 196622, 0, 2, 131086, 0, 0, 65550, 0, 2, 14, 0, 2, 1376269, 0, 2, 1310733, 0, 2, 1245197, 0, 0, 1179661, 0, 2, 1114125, 0, 0, 1048589, 0, 1, 983053, 0, 2, 917517, 0, 0, 851981, 0, 2, 786445, 0, 0, 720909, 0, 1, 655373, 0, 1, 589837, 0, 1, 524301, 0, 2, 458765, 0, 0, 393229, 0, 0, 327693, 0, 0, 262157, 0, 0, 196621, 0, 2, 131085, 0, 2, 65549, 0, 0, 13, 0, 1, 1376268, 0, 0, 1310732, 0, 0, 1245196, 0, 0, 1179660, 0, 0, 1114124, 0, 2, 1048588, 0, 0, 983052, 0, 0, 917516, 0, 0, 851980, 0, 1, 786444, 0, 1, 720908, 0, 0, 655372, 0, 1, 589836, 0, 1, 524300, 0, 0, 458764, 0, 2, 393228, 0, 2, 327692, 0, 0, 262156, 0, 1, 196620, 0, 0, 131084, 0, 0, 65548, 0, 2, 12, 0, 0, 1376267, 0, 2, 1310731, 0, 0, 1245195, 0, 1, 1179659, 0, 0, 1114123, 0, 0, 1048587, 0, 1, 983051, 0, 0, 917515, 0, 0, 851979, 0, 0, 786443, 0, 0, 720907, 0, 1, 655371, 0, 1, 589835, 0, 2, 524299, 0, 0, 458763, 0, 0, 393227, 0, 1, 327691, 0, 2, 262155, 0, 2, 196619, 0, 0, 131083, 0, 0, 65547, 0, 2, 11, 0, 0, 1376266, 0, 2, 1310730, 0, 0, 1245194, 0, 0, 1179658, 0, 1, 1114122, 0, 0, 1048586, 0, 0, 983050, 0, 1, 917514, 0, 0, 851978, 0, 1, 786442, 0, 0, 720906, 0, 1, 655370, 0, 1, 589834, 0, 1, 524298, 0, 2, 458762, 0, 1, 393226, 0, 0, 327690, 0, 1, 262154, 0, 0, 196618, 0, 0, 131082, 0, 2, 65546, 0, 1, 10, 0, 0, 1376265, 0, 2, 1310729, 0, 0, 1245193, 0, 2, 1179657, 0, 1, 1114121, 0, 0, 1048585, 0, 1, 983049, 0, 2, 917513, 0, 2, 851977, 0, 2, 786441, 0, 1, 720905, 0, 0, 655369, 0, 0, 589833, 0, 0, 524297, 0, 1, 458761, 0, 2, 393225, 0, 1, 327689, 0, 2, 262153, 0, 1, 196617, 0, 1, 131081, 0, 0, 65545, 0, 0, 9, 0, 0, 1376264, 0, 2, 1310728, 0, 0, 1245192, 0, 0, 1179656, 0, 2, 1114120, 0, 2, 1048584, 0, 0, 983048, 0, 1, 917512, 0, 0, 851976, 0, 1, 786440, 0, 0, 720904, 0, 1, 655368, 0, 0, 589832, 0, 0, 524296, 0, 1, 458760, 0, 2, 393224, 0, 1, 327688, 0, 0, 262152, 0, 2, 196616, 0, 0, 131080, 0, 1, 65544, 0, 0, 8, 0, 2, 1376263, 0, 2, 1310727, 0, 2, 1245191, 0, 2, 1179655, 0, 0, 1114119, 0, 0, 1048583, 0, 0, 983047, 0, 1, 917511, 0, 1, 851975, 0, 0, 786439, 0, 1, 720903, 0, 1, 655367, 0, 2, 589831, 0, 2, 524295, 0, 1, 458759, 0, 1, 393223, 0, 2, 327687, 0, 1, 262151, 0, 0, 196615, 0, 2, 131079, 0, 0, 65543, 0, 0, 7, 0, 0, 1376262, 0, 0, 1310726, 0, 0, 1245190, 0, 2, 1179654, 0, 1, 1114118, 0, 0, 1048582, 0, 0, 983046, 0, 1, 917510, 0, 0, 851974, 0, 2, 786438, 0, 0, 720902, 0, 0, 655366, 0, 2, 589830, 0, 2, 524294, 0, 0, 458758, 0, 0, 393222, 0, 1, 327686, 0, 1, 262150, 0, 2, 196614, 0, 0, 131078, 0, 0, 65542, 0, 1, 6, 0, 2, 1376261, 0, 0, 1310725, 0, 2, 1245189, 0, 1, 1179653, 0, 0, 1114117, 0, 0, 1048581, 0, 2, 983045, 0, 0, 917509, 0, 0, 851973, 0, 0, 786437, 0, 0, 720901, 0, 2, 655365, 0, 0, 589829, 0, 0, 524293, 0, 1, 458757, 0, 1, 393221, 0, 0, 327685, 0, 1, 262149, 0, 0, 196613, 0, 0, 131077, 0, 0, 65541, 0, 2, 5, 0, 0, 1376260, 0, 1, 1310724, 0, 0, 1245188, 0, 0, 1179652, 0, 0, 1114116, 0, 0, 1048580, 0, 0, 983044, 0, 2, 917508, 0, 2, 851972, 0, 0, 786436, 0, 1, 720900, 0, 0, 655364, 0, 1, 589828, 0, 1, 524292, 0, 1, 458756, 0, 1, 393220, 0, 0, 327684, 0, 0, 262148, 0, 0, 196612, 0, 0, 131076, 0, 1, 65540, 0, 0, 4, 0, 0, 1376259, 0, 0, 1310723, 0, 2, 1245187, 0, 0, 1179651, 0, 0, 1114115, 0, 0, 1048579, 0, 1, 983043, 0, 0, 917507, 0, 0, 851971, 0, 2, 786435, 0, 2, 720899, 0, 2, 655363, 0, 1, 589827, 0, 0, 524291, 0, 1, 458755, 0, 0, 393219, 0, 0, 327683, 0, 1, 262147, 0, 2, 196611, 0, 2, 131075, 0, 1, 65539, 0, 0, 3, 0, 2, 1376258, 0, 0, 1310722, 0, 0, 1245186, 0, 0, 1179650, 0, 1, 1114114, 0, 0, 1048578, 0, 0, 983042, 0, 0, 917506, 0, 1, 851970, 0, 0, 786434, 0, 1, 720898, 0, 2, 655362, 0, 2, 589826, 0, 0, 524290, 0, 0, 458754, 0, 0, 393218, 0, 0, 327682, 0, 1, 262146, 0, 0, 196610, 0, 0, 131074, 0, 1, 65538, 0, 0, 2, 0, 0, 1376257, 0, 0, 1310721, 0, 0, 1245185, 0, 0, 1179649, 0, 0, 1114113, 0, 2, 1048577, 0, 1, 983041, 0, 2, 917505, 0, 0, 851969, 0, 1, 786433, 0, 1, 720897, 0, 1, 655361, 0, 0, 589825, 0, 0, 524289, 0, 1, 458753, 0, 2, 393217, 0, 0, 327681, 0, 1, 262145, 0, 1, 196609, 0, 1, 131073, 0, 0, 65537, 0, 1, 1, 0, 0, 1376256, 0, 0, 1310720, 0, 2, 1245184, 0, 0, 1179648, 0, 2, 1114112, 0, 2, 1048576, 0, 1, 983040, 0, 0, 917504, 0, 1, 851968, 0, 0, 786432, 0, 0, 720896, 0, 1, 655360, 0, 0, 589824, 0, 2, 524288, 0, 0, 458752, 0, 0, 393216, 0, 1, 327680, 0, 1, 262144, 0, 0, 196608, 0, 0, 131072, 0, 1, 65536, 0, 2, 0, 0, 0)

[node name="maze" parent="." instance=ExtResource("2_6k68x")]

[node name="Player1" parent="." instance=ExtResource("3_sa3do")]
position = Vector2(42, 61)
scale = Vector2(1.65, 1.65)

[node name="player2" parent="." instance=ExtResource("4_to8om")]
position = Vector2(75, 61)

[node name="GameCamera2D" parent="." instance=ExtResource("6_u35cj")]

[node name="Key" parent="." instance=ExtResource("7_1u20l")]
position = Vector2(109, 116)

[node name="Gate" parent="." instance=ExtResource("8_jqc4q")]
texture_repeat = 2
position = Vector2(187, 70)

[connection signal="body_exited" from="maze" to="." method="_on_maze_body_exited"]
[connection signal="body_entered" from="Key" to="." method="_on_key_body_entered"]
[connection signal="body_entered" from="Gate" to="." method="_on_gate_body_entered"]
